<resources>
    <string name="app_name">Canivete_suico</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="_0">0</string>
    <string name="equals">=</string>
    <string name="ce">CE</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="mult">*</string>
    <string name="div">/</string>
    <string name="open">(</string>
    <string name="close">)</string>
    <string name="ferramentas">Ferramentas</string>
    <string name="abrir_calculadora">Calculadora</string>
    <string name="abrir_dado">Dado</string>
    <string name="helloMessage">Roll the dice!</string>
    <string name="letsRoll">Lets roll!</string>
    <string name="rolled">Rolled!</string>
    <string name="diceRolled">The dice has been rolled!</string>
    <string name="emptyImage">An empty image</string>
    <string name="clickToRoll">Click to roll</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
