<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtFormula"
        style="@style/sdsd" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn1"
            android:text="@string/_1"
            tools:ignore="ButtonStyle"
            style="@style/CalculatorButton" />

        <Button
            android:id="@+id/btn2"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_2"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn3"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_3"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn4"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_4"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn5"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_5"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn6"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_6"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn7"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_7"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn8"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_8"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn9"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_9"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn0"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/_0"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnIgual"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/equals"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnCe"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/ce"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnSoma"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/plus"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnSubtracao"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/minus"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnMultiplicacao"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/mult"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnDivisao"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/div"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnAbreParenteses"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/open"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btnFecharParenteses"
            style="@style/CalculatorButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_margin="2dp"
            android:layout_weight="1"
            android:text="@string/close"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            tools:ignore="ButtonStyle" />
    </LinearLayout>
</LinearLayout>
