<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/lblLogin"
            style="@style/TextoFerramentas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:text="Login" />

        <EditText
            android:id="@+id/txtLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp" />

        <TextView
            android:id="@+id/lblSenha"
            style="@style/TextoFerramentas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Senha" />

        <EditText
            android:id="@+id/txtSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="numberPassword"
            android:minHeight="48dp" />

        <Button
            android:id="@+id/btnMeMandaUmOi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Me manda um oi" />

        <TextView
            style="@style/TextoFerramentas"
            android:text="@string/ferramentas" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageButton
                android:id="@+id/btnDado"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/abrir_dado"
                app:srcCompat="@drawable/ic_dado" />

            <ImageButton
                android:id="@+id/btnCalculadora"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_weight="1"
                android:background="@null"
                android:contentDescription="@string/abrir_calculadora"
                app:srcCompat="@drawable/ic_calculadora" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>